--- a/public/html/interest.html
+++ b/public/html/interest.html
@@ -8,10 +8,14 @@
       <div class="col-xs-12 col-sm-5">
         <img src="http://placehold.it/600x300" alt="">
       </div>
-      <a href="" class="btn btn-success btn-lg">Tell Me More</a>
+      <a href="" class="btn btn-primary btn-lg">Tell Me More</a>
       <a href=".login.html" class="btn btn-primary btn-lg">Sign Me Up</a>
     </div>
   </div>
+
+<svg id="bigTriangleColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 102" preserveAspectRatio="none">
+        <path d="M0 0 L50 100 L100 0 Z" />
+      </svg>
 
   <div class="below-fold">
 
