--- a/public/html/nav.html
+++ b/public/html/nav.html
@@ -26,6 +26,7 @@
     </div><!-- /.container-fluid -->
   </nav>
 
- <footer class="text-center">
+<!--  <footer class="text-center">
     <p>&#169;2016</p>
   </footer>
+ -->
