--- a/public/user/user.html
+++ b/public/user/user.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>MovieSwap</title>
+  <title>Dvd Swap user</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/sandstone/bootstrap.min.css" rel="stylesheet" integrity="sha384-QqZs0aSOGFan3GWVdP4PyCBp6icaF/4n8Q+wsmZUTiiVIqE4r4tFYcb8Osf+8y45" crossorigin="anonymous">
   <link rel="stylesheet" href="/style.css">
@@ -19,14 +19,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/index.html">MovieSwap</a>
+        <a class="navbar-brand" href="/index.html">Dvd Swap</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/browse.html">Browse</a></li>
-          <li><a href="/new-listing.html">New Listing</a></li>
           <li><a href="/profile.html">Profile</a></li>
           <li><a href="/login.html">Login / Register</a></li>
         </ul>
@@ -42,7 +41,7 @@
       <div class="col-xs-12 col-sm-5">
         <img src="http://placehold.it/600x300" alt="">
       </div>
-      <a href="" class="btn btn-success btn-lg">Tell Me More</a>
+      <a href="" class="btn btn-success btn-lg">Learn More</a>
       <a href=".login.html" class="btn btn-primary btn-lg">Sign Me Up</a>
     </div>
   </div>
@@ -55,6 +54,7 @@
       </div>
       <div class="col-xs-12 col-sm-8 col-sm-offset-2">
         <input type="text" id="movie-search">
+          <button type="button" id="send">Submit</button>
       </div>
       <div class="col-xs-12 col-sm-8 col-sm-offset-2">
         <span>Select the correct result</span>
@@ -92,15 +92,11 @@
         </div>
       </div>
     </div>
-
   </div>
 
   <footer class="text-center">
     <p>&#169;2016</p>
   </footer>
-
-
-
 
   <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
