--- a/public/user/detail.html
+++ b/public/user/detail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>MovieSwap</title>
+  <title>Dvd Swap detail</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/sandstone/bootstrap.min.css" rel="stylesheet" integrity="sha384-QqZs0aSOGFan3GWVdP4PyCBp6icaF/4n8Q+wsmZUTiiVIqE4r4tFYcb8Osf+8y45" crossorigin="anonymous">
   <link rel="stylesheet" href="/style.css">
@@ -34,27 +34,25 @@
     </div><!-- /.container-fluid -->
   </nav>
 
-  <div id="login" class="container">
-    <h2 class="text-center">Log In or Register</h2>
-    <div class="well col-xs-12 col-sm-6 col-sm-offset-3 text-center">
-      <a href="" class="btn btn-primary fb-login"><i class="fa fa-facebook"></i>Log In with Facebook</a>
-      <br>
-      <span> - OR - </span>
-      <br>
-      <label for="email">Email</label>
-      <br>
-      <input type="email" id="email">
-      <br>
-      <label for="password">Password</label>
-      <br>
-      <input type="password" id="password">
-      <br>
-      <label for="password2">Confirm Password</label>
-      <br>
-      <input type="password" id="password2">
-      <br>
-      <a href="" class="btn btn-default btn-sm login-btn">Log In</a>
-
+  <div id="detail" class="container">
+    <div class="col-xs-12 col-sm-3 col-sm-offset-2">
+      <img class="movie-cover" src="http://placehold.it/200x275" alt="">
+    </div>
+    <div class="col-xs-12 col-sm-5">
+      <h1 class="movie-title"><a href="">Movie Title</a>&nbsp;(1999)</h1>
+      <h3><i class="fa fa-star"></i>&nbsp;<i class="fa fa-star"></i>&nbsp;<i class="fa fa-star"></i>&nbsp;<i class="fa fa-star"></i>&nbsp;<i class="fa fa-star"></i>&nbsp;</h3>
+      <h4><b>Director:</b> Director Name</h4>
+      <p><b>Synopsis:&nbsp;&nbsp;</b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, nisi cumque porro, minima vitae perferendis nihil ullam impedit aliquam tempora officia. Pariatur repudiandae, ut inventore molestias corporis voluptatum iste libero natus quisquam nesciunt ad nam doloremque nihil quo fugiat impedit facilis quis reprehenderit sapiente. Neque omnis nobis quibusdam quod est cum labore incidunt voluptatibus repellendus quaerat dolorum hic, iure, natus earum. Eius aperiam, provident, beatae eveniet nesciunt aspernatur ad temporibus magnam placeat autem quo explicabo, animi, libero ducimus.</p>
+    </div>
+    <div class="col-xs-12 col-sm-8 col-sm-offset-2">
+      <h3>Trader Notes</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto laborum dolor amet, hic, ipsa neque et quasi quo ipsam dolore sit sapiente tenetur obcaecati soluta deleniti. Dolores vel, non deleniti! Facere quidem et omnis quia vel nihil, asperiores necessitatibus quas, perferendis, eveniet ipsa, reiciendis consequatur voluptas. Aliquam, modi adipisci.</p>
+    </div>
+    <div class="col-xs-12 col-sm-8 col-sm-offset-2">
+      <h3>Contact Trader</h3>
+      <p>Let them know you're interested in trading and what you'd like to trade.</p>
+      <textarea name="" id="" cols="30" rows="10"></textarea>
+      <a href="" class="btn btn-success send-message">Send Message</a>
     </div>
   </div>
 
