--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -23,17 +23,17 @@
           <input type="text" ng-model="user.username">
         </md-input-container>
         <md-input-container>
-          <label>Avatar:</label>
-          <input type="text" ng-model="user.photo">
-        </md-input-container>
+        <label>Avatar:</label>
+        <input type="text" ng-model="user.photo">
+      </md-input-container>
 
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="closeModal btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" data-dismiss="modal">Save changes</button>
-      </div>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="closeModal btn btn-default" data-dismiss="modal">Close</button>
+      <button type="button" class="btn btn-primary" data-dismiss="modal">Save changes</button>
     </div>
   </div>
+</div>
 </div>
 
 
@@ -43,7 +43,7 @@
   <img ng-src="http://placehold.it/100x100" alt="http://placehold.it/100x100">
 </div>
 <div class="col-xs-12 text-center">
-  <h1>Hello, {{user.givenName}}</h1>
+  <h1>Hello, {{user.givenName}}!</h1>
   <p>{{user.username}}</p>
 </div>
 
@@ -114,132 +114,58 @@
 
 <div class="col-xs-12 col-sm-4">
   <h2>Movies I have...</h2>
-
   <md-autocomplete md-selected-item="selectedItem" md-search-text="searchText" md-items="movie in getMatches(searchText)" md-item-text="movie"  placeholder="Title">
   <span md-highlight-text="searchText">{{movie}}</span>
 </md-autocomplete>
-<md-button class="md-raised">Submit</md-button>
-
-<div class="well scrolly">
-  <!-- ng-repeat on have  -->
-  <div class="panel trade-panel"> 
+<md-button class="md-raised" ng-click="addHave(searchText)">Submit</md-button>
+<div class="well scrolly">Add A Movie!
+  <div ng-repeat="movie in movieHave track by $index" class="panel trade-panel"> 
     <div class="col-xs-12 col-sm-3">
       <img src="http://placehold.it/50x75" alt="">
     </div>
-    <h3><a href="/detail.html">Movie Title</a></h3>
-   <a><button class="btn btn-xs btn-default fa fa-trash"></button></a> 
+    <h3><a ui-sref="detail">{{movie}}</a></h3>
+    <a><button class="btn btn-xs btn-default fa fa-trash"></button></a> 
     <!-- <h4>Permanent Trade</h4> -->
   </div>
-<!--       <div class="panel trade-panel">
-        <div class="col-xs-12 col-sm-3">
-          <img src="http://placehold.it/50x75" alt="">
-        </div>
-        <h3><a href="/detail.html">Movie Title</a></h3>
-        <h4>Permanent Trade</h4>
-      </div>
-      <div class="panel trade-panel">
-        <div class="col-xs-12 col-sm-3">
-          <img src="http://placehold.it/50x75" alt="">
-        </div>
-        <h3><a href="/detail.html">Movie Title</a></h3>
-        <h4>Permanent Trade</h4>
-      </div>
-      <div class="panel trade-panel">
-        <div class="col-xs-12 col-sm-3">
-          <img src="http://placehold.it/50x75" alt="">
-        </div>
-        <h3><a href="/detail.html">Movie Title</a></h3>
-        <h4>Permanent Trade</h4> -->
-        <!-- </div> -->
+</div>
+</div>
 
-      </div>
+
+<div class="col-xs-12 col-sm-4">
+  <h2>Movies I want...</h2>
+  <md-autocomplete md-selected-item="selectedItem" md-search-text="searchText2" md-items="movie in getMatches(searchText2)" md-item-text="movie"  placeholder="Title">
+  <span md-highlight-text="searchText2">{{movie}}</span>
+</md-autocomplete>
+<md-button class="md-raised" ng-click="addWant(searchText2)">Submit</md-button>
+<div class="well scrolly">
+  <div ng-repeat="movie in movieWant track by $index" class="panel trade-panel">
+    <div class="col-xs-12 col-sm-3">
+      <img src="http://placehold.it/50x75" alt="">
     </div>
-
-    <div class="col-xs-12 col-sm-4">
-      <h2>Movies I want...</h2>
-      <!-- ng-repeat on wanted movies -->
-      
-      <md-autocomplete md-selected-item="selectedItem" md-search-text="searchText2" md-items="movie in getMatches(searchText)" md-item-text="movie"  placeholder="Title">
-      <span md-highlight-text="searchText">{{movie}}</span>
-    </md-autocomplete>
-    <md-button class="md-raised">Submit</md-button>
-    <div class="well scrolly">
-
-      <div class="panel trade-panel">
-        <div class="col-xs-12 col-sm-3">
-          <img src="http://placehold.it/50x75" alt="">
-        </div>
-        <h3><a href="/detail.html">Movie Title</a></h3>
-        <a><button class="btn btn-xs btn-default fa fa-trash"></button></a> 
-        <h4>Permanent Trade</h4>
-      </div>
-      <div class="panel trade-panel">
-        <div class="col-xs-12 col-sm-3">
-          <img src="http://placehold.it/50x75" alt="">
-        </div>
-        <h3><a href="/detail.html">Movie Title</a></h3>
-        <h4>Permanent Trade</h4>
-      </div>
-      <div class="panel trade-panel">
-        <div class="col-xs-12 col-sm-3">
-          <img src="http://placehold.it/50x75" alt="">
-        </div>
-        <h3><a href="/detail.html">Movie Title</a></h3>
-        <h4>Permanent Trade</h4>
-      </div>
-      <div class="panel trade-panel">
-        <div class="col-xs-12 col-sm-3">
-          <img src="http://placehold.it/50x75" alt="">
-        </div>
-        <h3><a href="/detail.html">Movie Title</a></h3>
-        <h4>Permanent Trade</h4>
-      </div>
-
-    </div>
+    <h3><a ui-sref="detail.html">{{movie}}</a></h3>
+    <a><button class="btn btn-xs btn-default fa fa-trash"></button></a> 
+    <!-- <h4>Permanent Trade</h4> -->
   </div>
-
-  <div class="col-xs-12 col-sm-4">
-    <h2>Trade History</h2>
-
-    <md-autocomplete md-selected-item="selectedItem" md-search-text="searchText3" md-items="movie in getMatches(searchText)" md-item-text="movie"  placeholder="Title">
-    <span md-highlight-text="searchText">{{movie}}</span>
-  </md-autocomplete>
-  <md-button class="md-raised">Submit</md-button>
-  <div class="well scrolly">
-   <!-- ng-repeat on trades history -->
-   <div class="panel trade-panel text-center history">
-    <img src="http://placehold.it/50x75" alt="">
-    <h4>for</h4>
-    <img src="http://placehold.it/50x75" alt="">
-    <p class="text-center">Permanent Trade</p>
-    <p>12/13/16</p>
-  </div>
-    <!--   <div class="panel trade-panel text-center history">
-        <img src="http://placehold.it/50x75" alt="">
-        <h4>for</h4>
-        <img src="http://placehold.it/50x75" alt="">
-        <p class="text-center">Permanent Trade</p>
-        <p>12/13/16</p>
-      </div>
-      <div class="panel trade-panel text-center history">
-        <img src="http://placehold.it/50x75" alt="">
-        <h4>for</h4>
-        <img src="http://placehold.it/50x75" alt="">
-        <p class="text-center">Permanent Trade</p>
-        <p>12/13/16</p>
-      </div>
-      <div class="panel trade-panel text-center history">
-        <img src="http://placehold.it/50x75" alt="">
-        <h4>for</h4>
-        <img src="http://placehold.it/50x75" alt="">
-        <p class="text-center">Permanent Trade</p>
-        <p>12/13/16</p>
-      </div> -->
+</div>
+</div>
 
 
-    </div>
-
-  </div>
+<div class="col-xs-12 col-sm-4">
+  <h2>Trade History</h2>
+  <md-autocomplete md-selected-item="selectedItem" md-search-text="searchText3" md-items="movie in getMatches(searchText)" md-item-text="movie"  placeholder="Title">
+  <span md-highlight-text="searchText">{{movie}}</span>
+</md-autocomplete>
+<md-button class="md-raised">Submit</md-button>
+<div class="well scrolly">
+ <div class="panel trade-panel text-center history">
+  <img src="http://placehold.it/50x75" alt="">
+  <h4>for</h4>
+  <img src="http://placehold.it/50x75" alt="">
+  <p class="text-center">Permanent Trade</p>
+  <p>12/13/16</p>
+</div>
+</div>
+</div>
 
 
 
