update button routes and styling

--- a/client/html/detail.html
+++ b/client/html/detail.html
@@ -17,7 +17,7 @@
       <h3>Contact Trader</h3>
       <p>Let them know you're interested in trading and what you'd like to trade.</p>
       <textarea name="" id="" cols="30" rows="10"></textarea>
-      <a href="" class="btn btn-success send-message">Send Message</a>
+      <a href="login" class="btn btn-success send-message">Send Message</a>
     </div>
   </div>
 
