--- a/public/html/interest.html
+++ b/public/html/interest.html
@@ -39,16 +39,16 @@
     <span>Select the correct result</span>
   </div>
   <div class="col-xs-3">
-    <a href=""><img class="movie-cover" src="http://placehold.it/200x275" alt=""></a>
+    <a ui-sref='detail'><img class="movie-cover" src="http://placehold.it/200x275" alt=""></a>
   </div>
   <div class="col-xs-3">
-    <a href=""><img class="movie-cover" src="http://placehold.it/200x275" alt=""></a>
+    <a ui-sref='detail'><img class="movie-cover" src="http://placehold.it/200x275" alt=""></a>
   </div>
   <div class="col-xs-3">
-    <a href=""><img class="movie-cover" src="http://placehold.it/200x275" alt=""></a>
+    <a ui-sref='detail'><img class="movie-cover" src="http://placehold.it/200x275" alt=""></a>
   </div>
   <div class="col-xs-3">
-    <a href=""><img class="movie-cover" src="http://placehold.it/200x275" alt=""></a>
+    <a ui-sref='detail'><img class="movie-cover" src="http://placehold.it/200x275" alt=""></a>
   </div>
   <div class="col-xs-12">
     <h3>People are looking for it!</h3>
@@ -57,17 +57,17 @@
     <div class="panel text-left">
       <img class="person-img round-img" src="http://placehold.it/50x50" alt="">
       <h4 class="looking">Looking for <i>Movie Title</i></h4>
-      <a href="/detail.html" class="btn btn-primary btn-sm swap-btn">Swap!</a>
+      <a ui-sref="profile" class="btn btn-primary btn-sm swap-btn">Swap!</a>
     </div>
     <div class="panel text-left">
       <img class="person-img round-img" src="http://placehold.it/50x50" alt="">
       <h4 class="looking">Looking for <i>Movie Title</i></h4>
-      <a href="/detail.html" class="btn btn-primary btn-sm swap-btn">Swap!</a>
+      <a ui-sref="profile" class="btn btn-primary btn-sm swap-btn">Swap!</a>
     </div>
     <div class="panel text-left">
       <img class="person-img round-img" src="http://placehold.it/50x50" alt="">
       <h4 class="looking">Looking for <i>Movie Title</i></h4>
-      <a href="/detail.html" class="btn btn-primary btn-sm swap-btn">Swap!</a>
+      <a ui-sref="profile" class="btn btn-primary btn-sm swap-btn">Swap!</a>
     </div>
   </div>
 </div>
