update styling of profile view

--- a/client/html/browse.html
+++ b/client/html/browse.html
@@ -31,6 +31,9 @@
       </select>
     </div>
 
+
+
+<div class="movieCont">
     <div class="col-xs-12 text-center">
       <div class="col-xs-12 col-sm-3 text-center">
         <img class="movie-cover" src="http://placehold.it/100x150" alt="">
@@ -87,7 +90,7 @@
         <h4 class="movie-title"><a href="/detail.html">Movie Title</a></h4>
       </div>
     </div>
-
+</div>
 
   </div>
 
