--- a/client/html/nav.html
+++ b/client/html/nav.html
@@ -8,7 +8,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" ui-sref="interest">MovieSwap</a>
+        <a class="navbar-brand" ui-sref="interest">DVD Swap</a>
       </div>
 
 
