--- a/client/html/profile.html
+++ b/client/html/profile.html
@@ -1,7 +1,6 @@
 
 <div id="profile" class="container">
   <div class="col-xs-12">
-    <a href="" class="btn btn-default btn-sm fa fa-pencil edit-btn" data-toggle="modal" data-target="#myModal"></a>
 
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -29,8 +28,8 @@
 
     </div>
     <div class="modal-footer">
-      <button type="button" class="closeModal btn btn-default" data-dismiss="modal">Close</button>
-      <button type="button" class="btn btn-primary" data-dismiss="modal">Save changes</button>
+      <button type="button" class="modalBtn closeModal btn btn-default" data-dismiss="modal">Close</button>
+      <button type="button" class="modalBtn btn btn-primary" data-dismiss="modal">Save changes</button>
     </div>
   </div>
 </div>
@@ -39,12 +38,15 @@
 
 
 </div>
+
 <div class="col-xs-12 text-center">
   <img ng-src="http://placehold.it/100x100" alt="http://placehold.it/100x100">
 </div>
 <div class="col-xs-12 text-center">
   <h1>Hello, {{user.givenName}}!</h1>
   <p>{{user.username}}</p>
+  <a href="" class="btn btn-default btn-sm fa fa-pencil edit-btn" title="Edit" data-toggle="modal" data-target="#myModal"> &nbsp Edit</a>
+
 </div>
 
 <div class="col-xs-12 col-sm-8 col-sm-offset-2">
@@ -57,19 +59,21 @@
             <a role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
               Tradername Someone
             </a>
-            <a href="" class="btn btn-xs btn-default fa fa-trash"></a>
           </h4>
+          <a href="" class="btn btn-xs btn-default fa fa-trash trash"></a>
         </div>
-        <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+        <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading">
           <div class="panel-body">
             Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
             <br>
-            <textarea placeholder="Reply" name="" id="" cols="30" rows="10"></textarea>
-            <a href="" class="btn btn-sm btn-success fa fa-paper-plane"></a>
+            <div class="buttonBox">
+              <a href="" class="inboxTradeBtn btn btn-sm btn-success">Accept</a>
+              <a href="" class="inboxTradeBtn btn btn-sm btn-danger">Deny</a>
+            </div>
           </div>
         </div>
       </div>
-      <div class="panel panel-default">
+      <!-- <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="headingTwo">
           <h4 class="panel-title">
             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -104,7 +108,7 @@
             <a href="" class="btn btn-sm btn-success fa fa-paper-plane"></a>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
@@ -114,10 +118,10 @@
 
 <div class="col-xs-12 col-sm-4">
   <h2>Movies I have...</h2>
-  <md-autocomplete md-selected-item="selectedItem" md-search-text="searchText" md-items="movie in getMatches(searchText)" md-item-text="movie"  placeholder="Title">
+  <md-autocomplete md-selected-item="selectedItem" md-search-text="searchText" md-items="movie in getMatches(searchText)" md-item-text="movie"  placeholder="Title" class="profileInput">
   <span md-highlight-text="searchText">{{movie}}</span>
 </md-autocomplete>
-<md-button class="md-raised profileBtn" ng-click="addHave(searchText)">Submit</md-button>
+<md-button class="md-raised profileBtn  md-fab" ng-click="addHave(searchText)"><i class="fa fa-arrow-right" aria-hidden="true"></i></md-button>
 <div class="well scrolly">Add A Movie!
   <div ng-repeat="movie in movieHave track by $index" class="panel trade-panel"> 
     <div class="col-xs-12 col-sm-3">
@@ -125,7 +129,7 @@
     </div>
     <h3><a ui-sref="detail">{{movie}}</a></h3>
     <a><button class="btn btn-xs btn-default fa fa-trash"></button></a> 
-    <!-- <h4>Permanent Trade</h4> -->
+
   </div>
 </div>
 </div>
@@ -133,10 +137,10 @@
 
 <div class="col-xs-12 col-sm-4">
   <h2>Movies I want...</h2>
-  <md-autocomplete md-selected-item="selectedItem" md-search-text="searchText2" md-items="movie in getMatches(searchText2)" md-item-text="movie"  placeholder="Title">
+  <md-autocomplete md-selected-item="selectedItem2" md-search-text="searchText2" md-items="movie in getMatches(searchText2)" md-item-text="movie"  placeholder="Title" class="profileInput">
   <span md-highlight-text="searchText2">{{movie}}</span>
 </md-autocomplete>
-<md-button class="md-raised profileBtn" ng-click="addWant(searchText2)">Submit</md-button>
+<md-button class="md-raised profileBtn md-fab" ng-click="addWant(searchText2)"><i class="fa fa-arrow-right" aria-hidden="true"></i></md-button>
 <div class="well scrolly">
   <div ng-repeat="movie in movieWant track by $index" class="panel trade-panel">
     <div class="col-xs-12 col-sm-3">
@@ -152,10 +156,10 @@
 
 <div class="col-xs-12 col-sm-4">
   <h2>Trade History</h2>
-  <md-autocomplete md-selected-item="selectedItem" md-search-text="searchText3" md-items="movie in getMatches(searchText)" md-item-text="movie"  placeholder="Title">
+  <md-autocomplete md-selected-item="selectedItem3" md-search-text="searchText3" md-items="movie in getMatches(searchText)" md-item-text="movie"  placeholder="Title" class="profileInput">
   <span md-highlight-text="searchText">{{movie}}</span>
 </md-autocomplete>
-<md-button class="md-raised profileBtn">Submit</md-button>
+<md-button class="md-raised profileBtn  md-fab"><i class="fa fa-arrow-right" aria-hidden="true"></i></md-button>
 <div class="well scrolly">
  <div class="panel trade-panel text-center history">
   <img src="http://placehold.it/50x75" alt="">
