--- a/public/html/browse.html
+++ b/public/html/browse.html
@@ -1,97 +1,97 @@
-<div id="browse" class="container">
-    <div class="col-xs-12 text-center">
-      <h1>Browse</h1>
-    </div>
-    <div class="col-xs-12 col-sm-2">
-      <input type="text" placeholder="Search">
-    </div>
-    <div class="col-xs-12 col-sm-2">
-      <select name="genre" id="genre">
-        <option value="" disabled selected>Genre</option>
-      </select>
-    </div>
-    <div class="col-xs-12 col-sm-2">
-      <select name="genre" id="genre">
-        <option value="" disabled selected>Year</option>
-      </select>
-    </div>
-    <div class="col-xs-12 col-sm-2">
-      <select name="genre" id="genre">
-        <option value="" disabled selected>Reviews</option>
-      </select>
-    </div>
-    <div class="col-xs-12 col-sm-2">
-      <select name="genre" id="genre">
-        <option value="" disabled selected>A - Z</option>
-      </select>
-    </div>
-    <div class="col-xs-12 col-sm-2">
-      <select name="genre" id="genre">
-        <option value="" disabled selected>Newest - Oldest</option>
-      </select>
-    </div>
+<div id="browse" class="container" ng-controller="browseCtrl">
+  <div class="col-xs-12 text-center">
+    <h1>Browse</h1>
+  </div>
+  <div class="col-xs-12 col-sm-2">
+    <md-input-container>
+    <label>Genre</label>
+    <md-select ng-model="movie">
+    <md-option ng-value="{{movie.genre}}" ng-repeat="genre in genres track by $index">{{ movie.genre }}</md-option>
+  </md-select>
+</md-input-container>
+
+</div>
+<div class="col-xs-12 col-sm-2">
+  <select name="genre" id="genre">
+    <option value="" disabled selected>Genre</option>
+  </select>
+</div>
+<div class="col-xs-12 col-sm-2">
+  <select name="genre" id="genre">
+    <option value="" disabled selected>Year</option>
+  </select>
+</div>
+<div class="col-xs-12 col-sm-2">
+  <select name="genre" id="genre">
+    <option value="" disabled selected>A - Z</option>
+  </select>
+</div>
+<div class="col-xs-12 col-sm-2">
+  <select name="genre" id="genre">
+    <option value="" disabled selected>Newest - Oldest</option>
+  </select>
+</div>
 
 
 
 <div class="movieCont">
-    <div class="col-xs-12 text-center">
-      <div class="col-xs-12 col-sm-3 text-center">
-        <img class="movie-cover" src="http://placehold.it/100x150" alt="">
-        <h4 class="movie-title"><a href="/detail.html">Movie Title</a></h4>
-      </div>
-      <div class="col-xs-12 col-sm-3 text-center">
-        <img class="movie-cover" src="http://placehold.it/100x150" alt="">
-        <h4 class="movie-title"><a href="/detail.html">Sit Amet</a></h4>
-      </div>
-      <div class="col-xs-12 col-sm-3 text-center">
-        <img class="movie-cover" src="http://placehold.it/100x150" alt="">
-        <h4 class="movie-title"><a href="/detail.html">Movie Title</a></h4>
-      </div>
-      <div class="col-xs-12 col-sm-3 text-center">
-        <img class="movie-cover" src="http://placehold.it/100x150" alt="">
-        <h4 class="movie-title"><a href="/detail.html">Movie Title</a></h4>
-      </div>
+  <div class="col-xs-12 text-center">
+    <div class="col-xs-12 col-sm-3 text-center" ng-repeat="movie in movies track by $index">
+      <img class="movie-cover" ng-src="{{movie.poster}}" alt="">
+      <h4 class="movie-title"><a ui-sref="detail">{{movie.title}}</a></h4>
     </div>
-
-    <div class="col-xs-12 text-center">
-      <div class="col-xs-12 col-sm-3 text-center">
-        <img class="movie-cover" src="http://placehold.it/100x150" alt="">
-        <h4 class="movie-title"><a href="/detail.html">Movie Title</a></h4>
-      </div>
-      <div class="col-xs-12 col-sm-3 text-center">
-        <img class="movie-cover" src="http://placehold.it/100x150" alt="">
-        <h4 class="movie-title"><a href="/detail.html">Movie Title</a></h4>
-      </div>
-      <div class="col-xs-12 col-sm-3 text-center">
-        <img class="movie-cover" src="http://placehold.it/100x150" alt="">
-        <h4 class="movie-title"><a href="/detail.html">Movie Title</a></h4>
-      </div>
-      <div class="col-xs-12 col-sm-3 text-center">
-        <img class="movie-cover" src="http://placehold.it/100x150" alt="">
-        <h4 class="movie-title"><a href="/detail.html">Movie Title</a></h4>
-      </div>
+    <!-- <div class="col-xs-12 col-sm-3 text-center">
+      <img class="movie-cover" src="http://placehold.it/100x150" alt="">
+      <h4 class="movie-title"><a href="/detail.html">Sit Amet</a></h4>
     </div>
-
-    <div class="col-xs-12 text-center">
-      <div class="col-xs-12 col-sm-3 text-center">
-        <img class="movie-cover" src="http://placehold.it/100x150" alt="">
-        <h4 class="movie-title"><a href="/detail.html">Movie Title</a></h4>
-      </div>
-      <div class="col-xs-12 col-sm-3 text-center">
-        <img class="movie-cover" src="http://placehold.it/100x150" alt="">
-        <h4 class="movie-title"><a href="/detail.html">Movie Title</a></h4>
-      </div>
-      <div class="col-xs-12 col-sm-3 text-center">
-        <img class="movie-cover" src="http://placehold.it/100x150" alt="">
-        <h4 class="movie-title"><a href="/detail.html">Movie Title</a></h4>
-      </div>
-      <div class="col-xs-12 col-sm-3 text-center">
-        <img class="movie-cover" src="http://placehold.it/100x150" alt="">
-        <h4 class="movie-title"><a href="/detail.html">Movie Title</a></h4>
-      </div>
+    <div class="col-xs-12 col-sm-3 text-center">
+      <img class="movie-cover" src="http://placehold.it/100x150" alt="">
+      <h4 class="movie-title"><a href="/detail.html">Movie Title</a></h4>
     </div>
-</div>
-
+    <div class="col-xs-12 col-sm-3 text-center">
+      <img class="movie-cover" src="http://placehold.it/100x150" alt="">
+      <h4 class="movie-title"><a href="/detail.html">Movie Title</a></h4>
+    </div>
   </div>
 
- 
+  <div class="col-xs-12 text-center">
+    <div class="col-xs-12 col-sm-3 text-center">
+      <img class="movie-cover" src="http://placehold.it/100x150" alt="">
+      <h4 class="movie-title"><a href="/detail.html">Movie Title</a></h4>
+    </div>
+    <div class="col-xs-12 col-sm-3 text-center">
+      <img class="movie-cover" src="http://placehold.it/100x150" alt="">
+      <h4 class="movie-title"><a href="/detail.html">Movie Title</a></h4>
+    </div>
+    <div class="col-xs-12 col-sm-3 text-center">
+      <img class="movie-cover" src="http://placehold.it/100x150" alt="">
+      <h4 class="movie-title"><a href="/detail.html">Movie Title</a></h4>
+    </div>
+    <div class="col-xs-12 col-sm-3 text-center">
+      <img class="movie-cover" src="http://placehold.it/100x150" alt="">
+      <h4 class="movie-title"><a href="/detail.html">Movie Title</a></h4>
+    </div>
+  </div>
+
+  <div class="col-xs-12 text-center">
+    <div class="col-xs-12 col-sm-3 text-center">
+      <img class="movie-cover" src="http://placehold.it/100x150" alt="">
+      <h4 class="movie-title"><a href="/detail.html">Movie Title</a></h4>
+    </div>
+    <div class="col-xs-12 col-sm-3 text-center">
+      <img class="movie-cover" src="http://placehold.it/100x150" alt="">
+      <h4 class="movie-title"><a href="/detail.html">Movie Title</a></h4>
+    </div>
+    <div class="col-xs-12 col-sm-3 text-center">
+      <img class="movie-cover" src="http://placehold.it/100x150" alt="">
+      <h4 class="movie-title"><a href="/detail.html">Movie Title</a></h4>
+    </div>
+    <div class="col-xs-12 col-sm-3 text-center">
+      <img class="movie-cover" src="http://placehold.it/100x150" alt="">
+      <h4 class="movie-title"><a href="/detail.html">Movie Title</a></h4>
+    </div>
+  </div> -->
+</div>
+
+</div>
+
