--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -73,42 +73,6 @@
           </div>
         </div>
       </div>
-      <!-- <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="headingTwo">
-          <h4 class="panel-title">
-            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Imaguy Traderman
-            </a>
-            <a href="" class="btn btn-xs btn-default fa fa-trash"></a>
-          </h4>
-        </div>
-        <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-          <div class="panel-body">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-            <br>
-            <textarea placeholder="Reply" name="" id="" cols="30" rows="10"></textarea>
-            <a href="" class="btn btn-sm btn-success fa fa-paper-plane"></a>
-          </div>
-        </div>
-      </div>
-      <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="headingThree">
-          <h4 class="panel-title">
-            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Soandso Swapgirl
-            </a>
-            <a href="" class="btn btn-xs btn-default fa fa-trash"></a>
-          </h4>
-        </div>
-        <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-          <div class="panel-body">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-            <br>
-            <textarea placeholder="Reply" name="" id="" cols="30" rows="10"></textarea>
-            <a href="" class="btn btn-sm btn-success fa fa-paper-plane"></a>
-          </div>
-        </div>
-      </div> -->
     </div>
   </div>
 </div>
@@ -118,17 +82,24 @@
 
 <div class="col-xs-12 col-sm-4">
   <h2>Movies I have...</h2>
-  <md-autocomplete md-selected-item="selectedItem" md-search-text="searchText" md-items="movie in getMatches(searchText)" md-item-text="movie"  placeholder="Title" class="profileInput">
-  <span md-highlight-text="searchText">{{movie}}</span>
+  <md-autocomplete
+  md-selected-item="selectedItem"
+  md-search-text="searchText"
+  md-items="movie in getMatches(searchText)" 
+  md-search-text-change="searchTextChange(searchText)"
+  md-item-text="movie.title"
+  placeholder="Title"
+  class="profileInput">
+  <span md-highlight-text="searchText">{{movie.title}} Year: {{movie.year}} Genre: {{movie.genre}}</span>
 </md-autocomplete>
 <md-button class="md-raised profileBtn  md-fab" ng-click="addHave(searchText)"><i class="fa fa-arrow-right" aria-hidden="true"></i></md-button>
-<div class="well scrolly">Add A Movie!
-  <div ng-repeat="movie in movieHave track by $index" class="panel trade-panel"> 
+<div class="well scrolly">
+  <div ng-repeat="movie in profileUser.haves track by $index" class="panel trade-panel"> 
     <div class="col-xs-12 col-sm-3">
       <img src="http://placehold.it/50x75" alt="">
     </div>
-    <h3><a ui-sref="detail">{{movie}}</a></h3>
-    <a><button class="btn btn-xs btn-default fa fa-trash"></button></a> 
+    <h3><a ui-sref="detail">{{movie.title}}</a></h3>
+    <a><button class="btn btn-xs btn-default fa fa-trash" ng-click="bai(movie)"></button></a> 
 
   </div>
 </div>
